--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <body>
-    Hello World! This is my website.
+    <h1>Hello World! This is my website.</h1>
+    <p>Welcome to my personal website. Stay tuned for more updates!</p>
   </body>
+</html>
+
+<title>About Me</title>
+</head>
+<body>
+  <h1>About Me</h1>
+  <p>This page is all about me!</p>
+</body>
 </html>
