--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Personal Website</title>
+  </head>
   <body>
-    <h1>Hello World! This is my website.</h1>
-    <p>Welcome to my personal website. Stay tuned for more updates!</p>
+    <nav></nav>
+    <main>
+      Hello World! This is my website. 
+      This is a sentence.
+    </main>
+    <footer>© 2023 My Personal Website | All Rights Reserved | Made with love ♥</footer>
   </body>
 </html>
 
