--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
   <body>
     <nav></nav>
     <main>
-      Hello World! This is my website. 
-      This is a sentence.
+        <h1><strong>Welcome !</strong></h1>
+      <p>Hello World! This is my website.</p>
+      <p>This is a sentence.</p>
     </main>
     <footer>© 2023 My Personal Website | All Rights Reserved | Made with love ♥</footer>
   </body>
 </html>
 
-<title>About Me</title>
+
+<!-- <title>About Me</title>  <--for practise
 </head>
-<body>
+<body>              
   <h1>About Me</h1>
   <p>This page is all about me!</p>
 </body>
-</html>
+</html> -->
