Updated Tasks -Updated Resume

--- a/resume.html
+++ b/resume.html
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
-<html>
   <head>
-    <title>Personal Website</title>
+  <title>Resume | My Personal Website</title>
   </head>
   <body>
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <div class="resume">
+        <section class="section">
+          <h2 class="section-title">Education</h2>
+          <p>Insert your education details here, such as your degrees, universities, graduation dates, etc.</p>
+        </section>
+
+        <section class="section">
+          <h2 class="section-title">Experience</h2>
+          <p>Include your work experience, internships, job roles, and responsibilities.</p>
+        </section>
+
+        <section class="section">
+          <h2 class="section-title">Skills</h2>
+          <p>List your technical skills, programming languages, tools, and soft skills.</p>
+        </section>
+
+        <section class="section">
+          <h2 class="section-title">Projects</h2>
+          <p>Describe key projects you've worked on, including technologies used and your role.</p>
+        </section>
+
+        <section class="section">
+          <h2 class="section-title">Coursework</h2>
+          <p>Include relevant coursework related to your field of study or career interests.</p>
+        </section>
+
+        <section class="section">
+          <h2 class="section-title">Activities</h2>
+          <p>Insert details of extracurricular activities or clubs you’ve participated in.</p>
+        </section>
+
+        <section class="section">
+          <h2 class="section-title">Awards</h2>
+          <p>Highlight any honors or awards you’ve received during your academic or professional career.</p>
+        </section>
+
+        <section class="section">
+          <h2 class="section-title">Interests</h2>
+          <p>List any hobbies or personal interests you’d like to showcase.</p>
+        </section>
+
+        <section class="section">
+          <h2 class="section-title">References</h2>
+          <p>Include professional references or indicate “Available upon request.”</p>
+        </section>
+      </div>
     </main>
+
+    <footer>© 2024 My Personal Website | All Rights Reserved | Made with love ♥</footer>
   </body>
 </html>
