--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <title>Personal Website</title>
   </head>
   <body>
-    <nav></nav>
+    <nav class="navbar">
+        <h1 class="logo">
+          <a href="index.html">personal website</a>
+        </h1>
+      </nav>
     <main>
       <h1>hello world!</h1>
       <div class="about">
