--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
   </head>
   <body>
     <nav class="navbar">
-        <h1 class="logo">
-          <a href="index.html">personal website</a>
-        </h1>
+        <h1 class="logo"><a href="index.html">personal website</a></h1>
+        <ul class="nav-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
     <main>
       <h1>hello world!</h1>
       <div class="about">
-        <div class="about-image"></div>
+        <div class="about-image">
+            <img src="sky.jpg"  alt="A video of an image of the sky and clouds being too
+            big">
+        </div>
         <div class="about-text">
           <p>
             <strong>Hack4Impact</strong> is a 501c3
