Updated Tasks -Updated Resume

--- a/form.html
+++ b/form.html
@@ -1,4 +1,20 @@
-<main>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Personal Website</title>
+  </head>
+  <body>
+    <nav class="navbar">
+        <h1 class="logo"><a href="index.html">personal website</a></h1>
+        <ul class="nav-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    <main>
     <p>Form</p>
     <form>
       <!--This is a comment in HTML. It lets you write text that
@@ -30,3 +46,7 @@
       ></textarea>
       <br><br>
       <input type="submit" value="Submit" />
+    </main>
+    <footer>© 2023 My Personal Website | All Rights Reserved | Made with love ♥</footer>
+  </body>
+</html>
