--- a/resume.html
+++ b/resume.html
@@ -4,50 +4,116 @@
   </head>
   <body>
     <main>
-      <div class="resume">
+        <nav class="navbar">
+        <h1 class="logo"><a href="index.html">personal website</a></h1>
+            <ul class="nav-list">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="resume.html">Resume</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        <div class="resume">
+            <h2 class="section-title">Resume</h2>
         <section class="section">
-          <h2 class="section-title">Education</h2>
-          <p>Insert your education details here, such as your degrees, universities, graduation dates, etc.</p>
-        </section>
+            <h2 class="section-title">Education</h2>
+            <p><strong>Software Engineering</strong><br>
+            California Polytechnic State University<br>
+            Expected Graduation: June 2026<br>
+            San Luis Obispo, United States<br>
+            Cumulative GPA: 3.0<br>
+          </section>
+  
+          <section class="section">
+            <h2 class="section-title">Experience</h2>
+            <p><strong>Software Engineer Intern</strong><br>
+            Hexaware Technologies | July 2024 – Present<br>
+            - Developed a shopping cart application using Core Java, Spring Framework, Spring Boot, REST API, MySQL, HTML/CSS, and React.js.<br>
+            - Implemented user authentication, product listing, cart management, and order processing features.<br>
+            - Integrated RESTful APIs and ensured data persistence with MySQL.<br>
+            - Conducted unit testing with JUnit to maintain code quality and collaborated with the team to meet business requirements.</p>
+  
+            <p><strong>Instructional Student Assistant</strong><br>
+            Cal Poly Computer Science and Software Engineering Department | Sept 2023 – Present<br>
+            - Provided feedback on assignments and lab work for Data Structures (CSC 202).<br>
+            - Assessed and graded weekly homework and projects, ensuring adherence to course guidelines.</p>
+  
+            <p><strong>Software Lead</strong><br>
+            Team Tech - Society of Women Engineers | Nov 2023 – Present<br>
+            - Designed and developed a marketing website using PHP and CSS to showcase the Wheelchair Securement System for Team Tech Competition sponsored by Boeing at WE24.<br>
+            - Conducted research and testing to create a Securement System for airplanes, improving accessibility for wheelchair users in air travel.</p>
+          </section>
+  
+          <section class="section">
+            <h2 class="section-title">Skills</h2>
+            <p><strong>Programming Languages:</strong>
+                <ul>
+                <li> C</li>
+                <li> Java</li>
+                <li>Python</li>
+                <li>C++</li>
+                <li>HTML</li>
+                <li>JavaScript</li> 
+                </ul>
+                <strong>Software Tools:</strong>
+                <ul>
+                <li> Git</li>
+                <li>Visual Studio Code</li>
+                <li>Microsoft Excel</li>
+                <li>Docker</li>
+                <li>IntelliJ</li>
+                <li>PyCharm</li> 
+                </ul>
+          </section>
+  
+          <section class="section">
+            <h2 class="section-title">Projects</h2>
+            <p><strong>User Login API with Email and OTP Authentication</strong><br>
+            - Developed using Django REST Framework, PostgreSQL, and Docker.<br>
+            - Created a secure backend API for user authentication with OTP verification and secure tokens.</p>
+  
+            <p><strong>Secure Web Server Implementation</strong><br>
+            - Designed and deployed a secure cloud network with AWS, using public and private subnets.<br>
+            - Configured web and RDS servers with robust security practices.</p>
+  
+            <p><strong>File System Emulator</strong><br>
+            - Developed a custom file system emulator in C using command-line arguments and structs.</p>
+  
+            <p><strong>A* Pathing Game Simulation</strong><br>
+            - Implemented A* search algorithm to find the fastest route for characters in a simulation using Java.</p>
+  
+            <p><strong>Huffman Coding</strong><br>
+            - Developed a Python program using binary trees to compress strings based on character frequency.</p>
+          </section>
 
-        <section class="section">
-          <h2 class="section-title">Experience</h2>
-          <p>Include your work experience, internships, job roles, and responsibilities.</p>
-        </section>
-
-        <section class="section">
-          <h2 class="section-title">Skills</h2>
-          <p>List your technical skills, programming languages, tools, and soft skills.</p>
-        </section>
-
-        <section class="section">
-          <h2 class="section-title">Projects</h2>
-          <p>Describe key projects you've worked on, including technologies used and your role.</p>
-        </section>
-
-        <section class="section">
-          <h2 class="section-title">Coursework</h2>
-          <p>Include relevant coursework related to your field of study or career interests.</p>
-        </section>
-
-        <section class="section">
-          <h2 class="section-title">Activities</h2>
-          <p>Insert details of extracurricular activities or clubs you’ve participated in.</p>
-        </section>
-
-        <section class="section">
-          <h2 class="section-title">Awards</h2>
-          <p>Highlight any honors or awards you’ve received during your academic or professional career.</p>
-        </section>
-
-        <section class="section">
-          <h2 class="section-title">Interests</h2>
-          <p>List any hobbies or personal interests you’d like to showcase.</p>
-        </section>
-
-        <section class="section">
-          <h2 class="section-title">References</h2>
-          <p>Include professional references or indicate “Available upon request.”</p>
+          <section class="section">
+            <h2 class="section-title">Coursework</h2>
+                <ul>
+                <li> Data Structures</li>
+                <li> Project-Based Object-Oriented Programming and Design</li>
+                <li> Intro to Computer Organization</li>
+                <li> Discrete Structures</li>
+                <li> Individual Software Design and Development</li>
+                <li> Design and Analysis of Algorithms.</li> 
+                </ul>
+          </section>
+  
+          <section class="section">
+            <h2 class="section-title">Cerifications</h2>
+            <p><strong>Cloud Computing with AWS</strong><br>
+            Indian Institute of Technology, Kanpur | July 2024<br>
+            - Focused on designing and deploying scalable, secure cloud infrastructures with VPCs, subnets, and NAT gateways.</p>
+  
+            <p><strong>Statistical Machine Learning</strong><br>
+            Indian Institute of Technology, Bombay | June 2024<br>
+            - Learned advanced regression and classification techniques with hands-on practice using R.</p>
+          </section>
+  
+          <section class="section">
+            <h2 class="section-title">Activities</h2>
+            <p>Society of Women Engineers (SWE), Women Involved in Software and Hardware (WISH), CSAI, Colour Coded, Indian Student Association, South Asian Student Association, Team Tech, Kaja Krew.</p>
+          </section>
         </section>
       </div>
     </main>
