Updated Tasks -Updated Portfolio and Blog

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,14 +12,14 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      
+
     <h1>My Projects</h1>
     
     <!-- Project Section -->
     <div class="project">
       <!-- Project Image (Wrapped in an anchor linking to home page) -->
       <a href="index.html">
-        <img src="images/homepage-screenshot.png" alt="Screenshot of my website" width="300" height="200" />
+        <img src="homepage-screenshot.jpg" alt="Screenshot of my website" width="600" height="400" />
       </a>
 
       <!-- Project Details -->
