--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <head>
   <title>Blog | My Personal Website</title>
+  <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
