--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <head>
   <title>Resume | My Personal Website</title>
+  <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
