Updated Tasks -Styling Using CSS

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 </head>
-<title>My Personal Website</title>
+<title>Pragati's Website</title>
 <link rel="stylesheet" href="styles.css" />
 <body>
   <main>
@@ -39,7 +39,8 @@
       </div>
     </div>
   </main>
-
-  <footer>© 2024 My Personal Website | All Rights Reserved | Made with love ♥</footer>
+  <footer class="footer">
+    © 2024 Pragati's Website | All Rights Reserved | Made with love ♥
+    </footer>
 </body>
 </html>
