--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-  <title>Resume | My Personal Website</title>
+  <title>Pragati's Website</title>
   <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -16,6 +16,12 @@
             </ul>
           </nav>
         <div class="resume">
+            <section class="resume">
+                <h2 class="section-title">Download My Resume</h2>
+                <a href="path/to/your-resume.pdf" class="download-btn" download>
+                  Download PDF Version
+                </a>
+              </section>
             <h2 class="section-title">Resume</h2>
         <section class="section">
             <h2 class="section-title">Education</h2>
@@ -118,7 +124,8 @@
         </section>
       </div>
     </main>
-
-    <footer>© 2024 My Personal Website | All Rights Reserved | Made with love ♥</footer>
+    <footer class="footer">
+        © 2024 Pragati's Website | All Rights Reserved | Made with love ♥
+        </footer>
   </body>
 </html>
