--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-  <title>Blog | My Personal Website</title>
+  <title>Pragati's Website</title>
   <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -21,6 +21,8 @@
                 <img src="Ace Attorney.jpg"  alt="An image of Ace Attorney">
         </div>
     </main>
-    <footer>© 2024 My Personal Website | All Rights Reserved | Made with love ♥</footer>
+    <footer class="footer">
+        © 2024 Pragati's Website | All Rights Reserved | Made with love ♥
+        </footer>
   </body>
 </html>
