--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Personal Website</title>
+    <title>Pragati's Website</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -16,6 +16,7 @@
         </ul>
       </nav>
     <main>
+        <h1>Contact Me</h1>
         <form id = "contact-form">
             <label for="name">Name:</label>
             <input type="text" id="name" />
@@ -26,6 +27,8 @@
             <input type="submit" value="Send Message" />
         </form>
     </main>
-    <footer>© 2023 My Personal Website | All Rights Reserved | Made with love ♥</footer>
+    <footer class="footer">
+        © 2024 Pragati's Website | All Rights Reserved | Made with love ♥
+        </footer>
   </body>
 </html>
