--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Personal Website</title>
+    <title>Pragati's Website</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -48,6 +48,8 @@
       <br><br>
       <input type="submit" value="Submit" />
     </main>
-    <footer>© 2023 My Personal Website | All Rights Reserved | Made with love ♥</footer>
+    <footer class="footer">
+        © 2024 Pragati's Website | All Rights Reserved | Made with love ♥
+        </footer>
   </body>
 </html>
