--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Personal Website</title>
+    <title>Pragati's Website</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -40,6 +40,8 @@
         </div>
       </div>
     </main>
-    <footer>© 2023 My Personal Website | All Rights Reserved | Made with love ♥</footer>
+    <footer class="footer">
+    © 2024 Pragati's Website | All Rights Reserved | Made with love ♥
+    </footer>
   </body>
 </html>
