had made these changes, but forgot to commit and push, please kindly accept

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <nav class="navbar">
-        <h1 class="logo"><a href="index.html">personal website</a></h1>
+        <h1 class="logo"><a href="index.html">Pragati's website</a></h1>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -24,7 +24,7 @@
             <input type="email" id="email"/>
             <label for="message">Message:</label>
             <textarea id="message" name="message"></textarea>
-            <input type="submit" value="Send Message" />
+            <input type="submit" value="Submit" />
         </form>
     </main>
     <footer class="footer">
