--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 <body>
   <main>
     <nav class="navbar">
-        <h1 class="logo"><a href="index.html">personal website</a></h1>
+        <h1 class="logo"><a href="index.html">Pragati's website</a></h1>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="blog.html">Blog</a></li>
