--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
   <body>
     <main>
         <nav class="navbar">
-        <h1 class="logo"><a href="index.html">personal website</a></h1>
+        <h1 class="logo"><a href="index.html">Pragati's website</a></h1>
             <ul class="nav-list">
               <li><a href="index.html">Home</a></li>
               <li><a href="blog.html">Blog</a></li>
@@ -17,10 +17,8 @@
           </nav>
         <div class="resume">
             <section class="resume">
-                <h2 class="section-title">Download My Resume</h2>
-                <a href="path/to/your-resume.pdf" class="download-btn" download>
-                  Download PDF Version
-                </a>
+                <h2 class="section-title">Download My Resume!</h2>
+                <a href="PRAGATI-TOPPO-RESUME.pdf" class="button" download>Download Resume</a>
               </section>
             <h2 class="section-title">Resume</h2>
         <section class="section">
@@ -29,7 +27,6 @@
             California Polytechnic State University<br>
             Expected Graduation: June 2026<br>
             San Luis Obispo, United States<br>
-            Cumulative GPA: 3.0<br>
           </section>
   
           <section class="section">
