--- a/blog.html
+++ b/blog.html
@@ -1,28 +1,30 @@
-<!DOCTYPE html>
-  <head>
-  <title>Pragati's Website</title>
-  <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <main>
-        <nav class="navbar">
-        <h1 class="logo"><a href="index.html">personal website</a></h1>
-            <ul class="nav-list">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="resume.html">Resume</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="blog-filler">
-            <div class="about-image">
-                <img src="Ace Attorney.jpg"  alt="An image of Ace Attorney">
-        </div>
-    </main>
-    <footer class="footer">
-        © 2024 Pragati's Website | All Rights Reserved | Made with love ♥
-        </footer>
-  </body>
+<title>Pragati's Blog</title>
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<main>
+  <nav class="navbar">
+    <h1 class="logo"><a href="index.html">Pragati's website</a></h1>
+    <ul class="nav-list">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+    <h1>Blog</h1>
+  <!-- Image container -->
+  <div class="blog-filler">
+    <div class="about-image">
+      <img src="Ace Attorney.jpg" alt="An image of Ace Attorney">
+    </div>
+  </div>
+</main>
+
+<footer class="footer">
+  © 2024 Pragati's Website | All Rights Reserved | Made with love ♥
+</footer>
+</body>
 </html>
