--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <nav class="navbar">
-        <h1 class="logo"><a href="index.html">personal website</a></h1>
+        <h1 class="logo"><a href="index.html">Pragati's website</a></h1>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -24,18 +24,10 @@
         </div>
         <div class="about-text">
           <p>
-            <strong>Hack4Impact</strong> is a 501c3
-            <em>non-profit organization</em> that does non-profit software
-            development in support of local non-profits. We build websites,
-            volunteer management systems, and web applications that an
-            organization would require to accomplisht their goals.
-          </p>
-          <p>
-            This year we are working with <strong>nine</strong> non-profits to
-            further their mission and provide them software tools. Organizations
-            we have worked in the past include <strong>NAACP</strong>,
-            <strong>Habitat 4 Humanity</strong>, <strong>Lumina</strong>, and
-            more!
+            Hello Everyone! My name is Pragati Toppo and I'm currently a third year Software 
+            Engineering Major here, at Cal Poly Slo! Here's my personal website as a part of Hack4Impact's
+            starter project. Just for fun, I've added a button for download resume which is linked to my actual 
+            resume and experimented with certain designs using CSS!
           </p>
         </div>
       </div>
